# tukai

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  build.sh
dictionary/: fr.txt  ga.txt  ita.txt  pl.txt
src/: app.rs  app_data.rs  common.rs  config.rs  configs.rs  constants.rs  cursor.rs  event_handler.rs  file_handler.rs  helper.rs  layout.rs  main.rs  screens.rs  storage.rs  terminal.rs  traits.rs  windows.rs
src/app/: mod.rs  terminal.rs  windows.rs
src/configs/: app_config.rs  mod.rs  terminal_config.rs  typing_window_config.rs
src/helpers/: mod.rs  stat_helper.rs
src/screens/: mod.rs  practice.rs  repeat.rs  stats.rs  stats_screen.rs  typing.rs  typing_screen.rs
src/storage/: activities.rs  mod.rs  stat_helper.rs  stats.rs  storage_handler.rs
src/storage/helpers/: stat_helper.rs
src/tools/: generator.rs  loader.rs  mod.rs
src/widgets/: instructions.rs
src/windows/: mod.rs  path.rs  search.rs  stats_window.rs  typing.rs  typing_window.rs
words/: en.txt
